--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -100,6 +100,10 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 path = "contracts/pool-token/fwp-wstx-wbtc-50-50.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
+[contracts.fwp-wstx-talex-50-50]
+path = "contracts/pool-token/fwp-wstx-talex-50-50.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
 [contracts.key-usda-wbtc]
 path = "contracts/key-token/key-usda-wbtc.clar"
 depends_on = [ "trait-ownable", "trait-semi-fungible" ]
@@ -147,7 +151,6 @@ depends_on = [ "yield-usda", "key-usda-wstx", "collateral-rebalancing-pool" ]
 [contracts.multisig-fwp-wstx-usda-50-50]
 path = "contracts/multisig/multisig-fwp-wstx-usda-50-50.clar"
 depends_on = [
-  "fwp-wstx-wbtc-50-50",
   "fwp-wstx-usda-50-50",
   "math-fixed-point",
   "fixed-weight-pool"
@@ -157,7 +160,14 @@ depends_on = [
 path = "contracts/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
 depends_on = [
   "fwp-wstx-wbtc-50-50",
-  "fwp-wstx-usda-50-50",
+  "math-fixed-point",
+  "fixed-weight-pool"
+]
+
+[contracts.multisig-fwp-wstx-talex-50-50]
+path = "contracts/multisig/multisig-fwp-wstx-talex-50-50.clar"
+depends_on = [
+  "fwp-wstx-talex-50-50",
   "math-fixed-point",
   "fixed-weight-pool"
 ]
